--- a/src/__typography.html
+++ b/src/__typography.html
@@ -356,16 +356,40 @@
 							</div>
 							<!--style default button end-->
 
-							<p>У всех шрифтов есть хотя бы одна сладкая точка; комбинация размеров, при котором шрифт лучше всего показывает себя на экране, точка, в которой анти-сглаживание, встроенное в браузеры, искажает дизайн шрифта как можно меньше.</p>
+							<div class="user-spacer">&nbsp;</div>
 
 							<!--form style-->
 							<h3>
-								<a href="#hashFormElementExample"  id="hashFormElementExample" class="hashAnchor"><span class="mark">Элементы форм</span></a>
+								<a href="#hashFormElementExample"  id="hashFormElementExample" class="hashAnchor"><span class="mark">Поля форм</span></a>
 							</h3>
 							<div class="layout-text">
 								@@include('_forms_form-default.tpl')
 							</div>
 							<!--form style end-->
+
+							<div class="user-spacer">&nbsp;</div>
+
+							<!--selects-->
+							<h3>
+								<a href="#hashFormsSelect" id="hashFormsSelect" class="hashAnchor"><span class="mark">Селекты</span></a>
+							</h3>
+							<div class="layout-text">
+								@@include('_forms_form-selects.tpl')
+							</div>
+							<!--selects end-->
+
+							<div class="user-spacer">&nbsp;</div>
+
+							<!--form style-->
+							<h3>
+								<a href="#hashFormLight"  id="hashFormLight" class="hashAnchor"><span class="mark">Поля форм (альтернативный вид)</span></a>
+							</h3>
+							<div class="layout-text">
+								@@include('_forms_form-light.tpl')
+							</div>
+							<!--form style end-->
+
+							<div class="user-spacer">&nbsp;</div>
 
 							<!--checkbox and radio-->
 							<h3>
