--- a/src/__typography.html
+++ b/src/__typography.html
@@ -498,7 +498,7 @@
 
 									a.innerHTML = elem[i].closest('h4, h3').textContent.trim();
 									if(elem[i].closest('h4')){
-										elem[i].closest('h4').setAttribute("class", "blah");
+//										elem[i].closest('h4').setAttribute("class", "blah");
 										li.className = 'navigationByTypographySubItem';
 									}
 									a.setAttribute('href', '#' + elem[i].id);
