--- a/src/404.html
+++ b/src/404.html
@@ -203,25 +203,69 @@
 	<footer class="footer">
 		<div class="max-wrap layout">
 			<div class="footer__holder">
-				<!--footer bottom-->
-				<div class="footer-bottom">
-					<div class="footer-bottom__holder">
-						<div class="footer-bottom__col">
-							<span class="copyright">&copy; <a href="index.html">Project</a> 2017</span>
-						</div>
-						<div class="footer-bottom__col">
-							<!--developer-->
-							<div class="developer">
-								<a href="http://astronim.by/">
-									<span class="developer__label">Разработка сайта —</span>
-									<span class="developer__logo">Astronim*Support</span>
-								</a>
+				<!--footer common-->
+				<div class="footer-common">
+					<div class="footer-common-holder">
+						<!--footer nav-->
+						<div class="footer-nav">
+							<div class="footer-nav__col">
+								<strong class="footer-nav__title"><a href="#"><span>Для Вас и Вашей семьи</span></a></strong>
+								<ul class="footer-nav__links">
+									<li><a href="#">Авто</a></li>
+									<li><a href="#">Поездки</a></li>
+									<li><a href="#">Здоровье</a></li>
+									<li><a href="#">Имущество</a></li>
+									<li><a href="#">Ответственность</a></li>
+								</ul>
 							</div>
-							<!--developer end-->
+							<div class="footer-nav__col">
+								<strong class="footer-nav__title"><span>Популярные разделы</span></strong>
+								<ul class="footer-nav__links">
+									<li><a href="#"><span>Цели изадачи МЧС</span></a></li>
+									<li><a href="#"><span>Направления деятельности</span></a></li>
+									<li><a href="#"><span>Руководство</span></a></li>
+									<li><a href="#"><span>Контакты</span></a></li>
+									<li><a href="#"><span>Важнейшие мероприятия</span></a></li>
+									<li><a href="#"><span>Электронные обращения</span></a></li>
+									<li><a href="#"><span>Родителям и педагогам</span></a></li>
+									<li><a href="#"><span>Вопрос-ответ</span></a></li>
+									<li><a href="#"><span>Отзывы о работе</span></a></li>
+									<li><a href="#"><span>Голосование</span></a></li>
+									<li><a href="#"><span>Цели изадачи МЧС</span></a></li>
+									<li><a href="#"><span>Направления деятельности</span></a></li>
+									<li><a href="#"><span>Руководство</span></a></li>
+									<li><a href="#"><span>Контакты</span></a></li>
+									<li><a href="#"><span>Важнейшие мероприятия</span></a></li>
+								</ul>
+							</div>
+						</div>
+						<!--footer nav end-->
+					</div>
+					<div class="footer-common-aside">
+						<div class="footer-common-aside__item">
+							<span class="copyright">&copy; 2017 ОАО ДВЭМЗ»</span>
+						</div>
+						<div class="footer-common-aside__item">
+							<address class="footer-adr">
+							ОАО ДВЭМЗ, г. Владивосток, ул. Молодежная, строение 1, корп. 3
+						</address>
+							<ul class="dl">
+								<li>
+									<div class="dt">Факс:</div>
+									<div class="dd">(423) 254 48 86</div>
+								</li>
+								<li>
+									<div class="dt">Эл. почта:</div>
+									<div class="dd"><a href="mailto:info@dvemz.ru">info@dvemz.ru</a></div>
+								</li>
+							</ul>
+						</div>
+						<div class="footer-common-aside__item">
+							<strong class="developer">Дизайн сайта: Astronim*Support</strong>
 						</div>
 					</div>
 				</div>
-				<!--footer bottom end-->
+				<!--footer common end-->
 			</div>
 		</div>
 	</footer>
