--- a/src/__index.html
+++ b/src/__index.html
@@ -15,22 +15,26 @@
 <!--scroll nav-->
 <ul class="scroll-nav scroll-nav-js">
 	<li data-menuanchor="mainSectionEntry" class="active">
-		<a href="#mainSectionEntry">Введение
+		<a href="#mainSectionEntry" title="Введение">
+			<span>Введение</span>
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="237.3 86.3 480.7 415.3" enable-background="new 237.3 86.3 480.7 415.3"> <path d="M631.7,478.3h-91v-147h-126v147h-91V291.7h-23.3v210H438v-147h79.3v147H655v-210h-23.3V478.3z M477.7,86.3L237.3,273  l14,18.7l226.3-177.3L704,291.7l14-18.7L477.7,86.3z"></path> </svg>
 		</a>
 	</li>
 	<li data-menuanchor="mainSectionNews">
-		<a href="#mainSectionNews">Новости
+		<a href="#mainSectionNews" title="Новости">
+			<span>Новости</span>
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="260.7 35 431.7 490" enable-background="new 260.7 35 431.7 490"> <g id="Layer_3"> <path d="M340,340.7h179.7v-23.3H340V340.7z M594.3,105V35H260.7v420h98v70h333.7V105H594.3z M284,429.3V56h287v373.3H284z    M669,501.7H379.7V455h214.7V128.3H669V501.7z M340,247.3h179.7V224H340V247.3z M340,154h179.7v-23.3H340V154z"></path> </g> </svg>
 		</a>
 	</li>
 	<li data-menuanchor="mainSectionProviders">
-		<a href="#mainSectionProviders">Поставщикам
+		<a href="#mainSectionProviders" title="Поставщикам">
+			<span>Поставщикам</span>
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 266 318.3" enable-background="new 0 0 266 318.3"> <path d="M175.1,156.3c25-14.5,41.9-41.6,41.9-72.5C217,37.6,179.4,0,133.3,0S49.5,37.6,49.5,83.8c0,30.9,16.8,57.9,41.8,72.4    C38.3,172.9,0,220.6,0,276.8v41.5h265.7l0.3-41.5C266,220.8,227.9,173.1,175.1,156.3z M69.5,83.8c0-35.2,28.6-63.8,63.8-63.8    c35.2,0,63.8,28.6,63.8,63.8s-28.6,63.8-63.8,63.8C98.1,147.5,69.5,118.9,69.5,83.8z M245.8,298.3H20v-21.5c0-59,50.7-107,113-107    s113,48,113,106.9L245.8,298.3z"></path> </svg>
 		</a>
 	</li>
 	<li data-menuanchor="mainSectionContacts">
-		<a href="#mainSectionContacts">Контакты
+		<a href="#mainSectionContacts" title="Контакты">
+			<span>Контакты</span>
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="309.7 35 350 478.3" enable-background="new 309.7 35 350 478.3"> <g id="Layer_2"> <path d="M484.7,35c-95.7,0-175,77-175,175c0,30.3,6.1,58.1,20.1,83.7l154.9,219.6L627,312.7c21-30.3,32.7-65.3,32.7-102.7   C662,112,582.7,35,484.7,35z M608.3,298.7L484.7,471.3L372.7,315l0,0l-14-18.7c-16.3-25.7-25.7-56-25.7-86.3   c0-84,67.7-151.7,151.7-151.7S636.3,126,636.3,210C638.7,242.7,627,273,608.3,298.7z M484.7,137.7c-39.7,0-70,32.7-70,70   c0,39.7,32.7,70,70,70s70-32.7,70-70C557,170.3,524.3,137.7,484.7,137.7z M484.7,256.7c-25.7,0-46.7-21-46.7-46.7   s21-46.7,46.7-46.7s46.7,21,46.7,46.7C531.3,235.7,510.3,256.7,484.7,256.7z"></path> </g> </svg>
 		</a>
 	</li>
@@ -141,7 +145,7 @@
 										<div class="main-section__pos">
 											<div class="main-section__title"><h2>Контакты</h2></div>
 											<div class="main-section__holder">
-												<div class="phone">+7 (423) 230-21-37</div>
+												<div class="phone"><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>
 												<div class="info">
 													<ul class="contacts">
 														<li>г. Владивосток, ул. Всеволода Сибирцева, 15, оф. 311</li>
