--- a/src/typography2.html
+++ b/src/typography2.html
@@ -827,7 +827,7 @@
 											</div>
 											<div class="input-wrap light-form field-effects-js">
 												<div class="label-holder"><label for="uf-field-02">Эл. почта <span class="form-mark">*</span></label></div>
-												<input type="text" id="uf-field-02" />
+												<input type="email" id="uf-field-02" />
 												<span class="error-note">Поле обязательное для заполнения</span>
 												<span class="confirm-note">&nbsp;</span>
 											</div>
@@ -969,16 +969,16 @@
 							<div class="images-slider layout-full-width">
 								<div class="images-slider__list">
 									<div class="images-slider__item">
-										<img data-lazy="../img/__temp-img-content-carousel-01.jpg" src="img/empty.png" alt="image description">
+										<img data-lazy="img/__temp-img-content-carousel-01.jpg" src="img/empty.png" alt="image description">
 									</div>
 									<div class="images-slider__item">
-										<img data-lazy="../img/__temp-img-content-carousel-02.jpg" src="img/empty.png" alt="image description">
+										<img data-lazy="img/__temp-img-content-carousel-02.jpg" src="img/empty.png" alt="image description">
 									</div>
 									<div class="images-slider__item">
-										<img data-lazy="../img/__temp-img-content-carousel-03.jpg" src="img/empty.png" alt="image description">
+										<img data-lazy="img/__temp-img-content-carousel-03.jpg" src="img/empty.png" alt="image description">
 									</div>
 									<div class="images-slider__item">
-										<img data-lazy="../img/__temp-img-content-carousel-04.jpg" src="img/empty.png" alt="image description">
+										<img data-lazy="img/__temp-img-content-carousel-04.jpg" src="img/empty.png" alt="image description">
 									</div>
 								</div>
 								<!--flashes-->
