--- a/src/typography.html
+++ b/src/typography.html
@@ -145,11 +145,11 @@
 	<aside class="top-panel">
 		<div class="logo-alt">
 			<a href="index.html">
-				<div class="logo-title">
-					<div class="fig"><span>Дальневосточный электромонтажный завод</span></div>
+				<div class="logo-alt-title">
+					<div class="logo-alt-title__fig"><span>Дальневосточный электромонтажный завод</span></div>
 				</div>
-				<div class="logo-map">
-					<div class="fig"><span>владивосток</span></div>
+				<div class="logo-alt-map">
+					<div class="logo-alt-map__fig"><span>владивосток</span></div>
 				</div>
 			</a>
 			<img style="display: none;" src="img/logo.png" alt="ДВЭМЗ">
