--- a/src/__ae-catalog.html
+++ b/src/__ae-catalog.html
@@ -23,13 +23,21 @@
 					<div class="sheet">
 						<div class="layout-article">
 							<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
-							<!--products-->
-							<div class="catalog full-width">
-								<div class="catalog__list">
-									@@loop("_catalog-items.tpl", "includes-json/catalog-items.json")
-								</div>
+							<!--view switcher-->
+							<div class="view-switcher js-view-switcher">
+								<a href="#" class="grid-view active" data-title="Показать товары плиткой"><span>Плиткой</span></a>
+								<a href="#" class="list-view" data-title="Показать товары списком"><span>Списком</span></a>
 							</div>
-							<!--products end-->
+							<!--view switcher end-->
+							<div class="layout-flood">
+								<!--catalog-->
+								<div class="catalog grid-view-activated">
+									<div class="catalog__list">
+										@@loop("_catalog-items.tpl", "includes-json/catalog-items.json")
+									</div>
+								</div>
+								<!--catalog end-->
+							</div>
 						</div>
 					</div>
 				</div>
@@ -41,7 +49,9 @@
 <!--MAIN end-->
 
 <!--SIDEBAR-->
-@@include('_layout_side-menu.tpl')
+@@include('_layout_catalog-menu.tpl', {
+	"catalogMenuActiveItem": "Электрощитовое оборудование"
+})
 <!--SIDEBAR-->
 
 @@include('_layout_foot.tpl')
