--- a/src/__ae-catalog.html
+++ b/src/__ae-catalog.html
@@ -50,7 +50,7 @@
 
 <!--SIDEBAR-->
 @@include('_layout_catalog-menu.tpl', {
-	"catalogMenuActiveItem": "Электрощитовое оборудование"
+	"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы"
 })
 <!--SIDEBAR-->
 
