--- a/src/__ae-catalog.html
+++ b/src/__ae-catalog.html
@@ -1,5 +1,5 @@
 @@include('_layout_head.tpl', {
-	"title": "АЭ - Каталог",
+	"title": "ЭA - Каталог",
 	"pageClass": "ea-site ea-catalog-page"
 })
 
